feat(api): read fabric
