# api/pkg/routes/fabric.go
@@ -14,5 +14,6 @@ func privateFabricRoutes(g *echo.Group) {
 	route.GET("", fabricController.ReadFabrics)
 	route.GET("/aggregate", fabricController.AggregateFabrics)
 	route.POST("", fabricController.CreateFabric)
-
+	route.GET("/:fabricId", fabricController.ReadFabrics)
+	route.PATCH("/:fabricId", fabricController.ReadFabrics)
 }
